[gd_scene load_steps=17 format=4 uid="uid://066kk6lq3ist"]

[ext_resource type="Script" uid="uid://bqgs6qnqhyujr" path="res://Cenas/area_3.gd" id="1_b6t7n"]
[ext_resource type="Texture2D" uid="uid://cu2jljc1vecv2" path="res://SpriteSheets/area3_fundo.png" id="3_kv7jj"]
[ext_resource type="TileSet" uid="uid://pfi0ssupkysi" path="res://SpriteSheets/Area3_Tileset.tres" id="3_lulm0"]
[ext_resource type="TileSet" uid="uid://wof1f0qku4s1" path="res://SpriteSheets/Area1_TileSet2.tres" id="6_3fpsp"]
[ext_resource type="PackedScene" uid="uid://b7ye3664gw7kb" path="res://Componentes/Player/Player.tscn" id="9_7flg8"]
[ext_resource type="PackedScene" uid="uid://iel7jsyjwxdj" path="res://Componentes/Inimigos/enemy_controller.tscn" id="12_agy7h"]
[ext_resource type="PackedScene" uid="uid://bwayse1d5026n" path="res://Componentes/Spawner/MobSpawn.tscn" id="13_t4381"]
[ext_resource type="PackedScene" uid="uid://d0d724dgyu3xp" path="res://Componentes/Spawner/MotoSpawn.tscn" id="14_7n4ro"]
[ext_resource type="PackedScene" uid="uid://bek8hshqdrwnf" path="res://Componentes/AreaHazardDestructable/colisao_pitfall.tscn" id="14_kv7jj"]
[ext_resource type="PackedScene" uid="uid://dydggnkiawk1j" path="res://Componentes/Checkpoint/Checkpoint.tscn" id="15_8o4gy"]
[ext_resource type="PackedScene" uid="uid://imu3blxtr0mq" path="res://Componentes/DoorSpawner/DoorSpawner.tscn" id="16_0wxkn"]
[ext_resource type="PackedScene" uid="uid://bqqxo1s2dkdpx" path="res://Componentes/item_granada_extra/item_granada_extra.tscn" id="18_cd0vo"]
[ext_resource type="PackedScene" uid="uid://n3wxtopay5nf" path="res://Componentes/Inimigos/Infantaria/Morteiro/agentes_morteiro.tscn" id="19_lji2o"]
[ext_resource type="PackedScene" uid="uid://bysbvev0pgw6k" path="res://Componentes/Portao/Portao.tscn" id="20_m5r2a"]
[ext_resource type="PackedScene" uid="uid://cf12y07bm78m5" path="res://Componentes/Triggers/Trigger.tscn" id="22_s5h8a"]
[ext_resource type="PackedScene" uid="uid://fy47plw4s21o" path="res://Componentes/Menu_etc/hud.tscn" id="23_ecu1h"]

[node name="Area3" type="Node2D"]
script = ExtResource("1_b6t7n")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
top_level = true
limit_left = 0
limit_top = 0

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(224, 0)
tile_map_data = PackedByteArray("AAD6/8v/AAAHAAAAAAD6/8z/AAAHAAEAAAD6/83/AAAHAAIAAAD6/87/AAAKAAMAAAD6/8//AAAKAAQAAAD7/8v/AAALAAAAAAD7/8z/AAALAAEAAAD7/83/AAALAAIAAAD7/87/AAALAAMAAAD7/8//AAALAAQAAAD8/8v/AAAMAAAAAAD8/8z/AAAMAAEAAAD8/83/AAAMAAIAAAD8/87/AAAMAAMAAAD8/8//AAAMAAQAAAD9/8v/AAANAAAAAAD9/8z/AAANAAEAAAD9/83/AAANAAIAAAD9/87/AAANAAMAAAD9/8//AAANAAQAAAD+/8v/AAAOAAAAAAD+/8z/AAAOAAEAAAD+/83/AAAOAAIAAAD+/87/AAAOAAMAAAD+/8//AAAOAAQAAAD//8v/AAAPAAAAAAD//8z/AAAPAAEAAAD//83/AAAPAAIAAAD//87/AAAPAAMAAAD//8//AAAPAAQAAAD3/8v/AAAEAAAAAAD2/8v/AAALAAAAABD1/8v/AAAMAAAAABD0/8v/AAANAAAAABDz/8v/AAAOAAAAABDy/8v/AAAPAAAAABD3/8z/AAAEAAEAAAD2/8z/AAALAAEAABD1/8z/AAAMAAEAABD0/8z/AAANAAEAABDz/8z/AAAOAAEAABDy/8z/AAAPAAEAABD3/83/AAAEAAIAAAD2/83/AAALAAIAABD1/83/AAAMAAIAABD0/83/AAANAAIAABDz/83/AAAOAAIAABDy/83/AAAPAAIAABD3/87/AAAKAAMAABD2/87/AAALAAMAABD1/87/AAAMAAMAABD0/87/AAANAAMAABDz/87/AAAOAAMAABDy/87/AAAPAAMAABD3/8//AAAKAAQAABD2/8//AAALAAQAABD1/8//AAAMAAQAABD0/8//AAANAAQAABDz/8//AAAOAAQAABDy/8//AAAPAAQAABD4/8v/AAAFAAAAAAD4/8z/AAAFAAEAAAD4/83/AAAFAAIAAAD5/8v/AAAGAAAAAAD5/8z/AAAGAAEAAAD5/83/AAAGAAIAAAA=")
tile_set = ExtResource("6_3fpsp")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(224, 0)
tile_map_data = PackedByteArray("AAD1/wkAAAAEAAMAAAD1/woAAAAEAAQAAAD1/wsAAAAEAAUAAAD2/wkAAAAFAAMAAAD2/woAAAAFAAQAAAD2/wsAAAAFAAUAAAD3/wkAAAAGAAMAAAD3/woAAAAGAAQAAAD3/wsAAAAGAAUAAAD4/wkAAAAHAAMAAAD4/woAAAAHAAQAAAD4/wsAAAAHAAUAAAD5//X/AAAEAAMAAAD5//b/AAAEAAQAAAD5//f/AAAEAAUAAAD6//X/AAAFAAMAAAD6//b/AAAFAAQAAAD6//f/AAAFAAUAAAD7//X/AAAGAAMAAAD7//b/AAAGAAQAAAD7//f/AAAGAAUAAAD8//X/AAAHAAMAAAD8//b/AAAHAAQAAAD8//f/AAAHAAUAAAD9/+3/AAAEAAMAAAD9/+7/AAAEAAQAAAD9/+//AAAEAAUAAAD+/+3/AAAFAAMAAAD+/+7/AAAFAAQAAAD+/+//AAAFAAUAAAD//+3/AAAGAAMAAAD//+7/AAAGAAQAAAD//+//AAAGAAUAAAAAAO3/AAAHAAMAAAAAAO7/AAAHAAQAAAAAAO//AAAHAAUAAAD3//3/AAAAAAMAAAD3//7/AAAAAAQAAAD3////AAAAAAUAAAD4//3/AAABAAMAAAD4//7/AAABAAQAAAD4////AAABAAUAAAD5//3/AAACAAMAAAD5//7/AAACAAQAAAD5////AAACAAUAAAD6//3/AAADAAMAAAD6//7/AAADAAQAAAD6////AAADAAUAAADv//X/AAAAAAMAAADv//b/AAAAAAQAAADv//f/AAAAAAUAAADw//X/AAABAAMAAADw//b/AAABAAQAAADw//f/AAABAAUAAADx//X/AAACAAMAAADx//b/AAACAAQAAADx//f/AAACAAUAAADy//X/AAADAAMAAADy//b/AAADAAQAAADy//f/AAADAAUAAADz/+H/AAAAAAMAAADz/+L/AAAAAAQAAADz/+P/AAAAAAUAAAD0/+H/AAABAAMAAAD0/+L/AAABAAQAAAD0/+P/AAABAAUAAAD1/+H/AAACAAMAAAD1/+L/AAACAAQAAAD1/+P/AAACAAUAAAD2/+H/AAADAAMAAAD2/+L/AAADAAQAAAD2/+P/AAADAAUAAAD7/9X/AAAAAAMAAAD7/9b/AAAAAAQAAAD7/9f/AAAAAAUAAAD8/9X/AAABAAMAAAD8/9b/AAABAAQAAAD8/9f/AAABAAUAAAD9/9X/AAACAAMAAAD9/9b/AAACAAQAAAD9/9f/AAACAAUAAAD+/9X/AAADAAMAAAD+/9b/AAADAAQAAAD+/9f/AAADAAUAAAD1/9n/AAAAAAkAAAD1/9r/AAAAAAoAAAD1/9v/AAAAAAsAAAD2/9n/AAABAAkAAAD2/9r/AAABAAoAAAD2/9v/AAABAAsAAAD3/9n/AAACAAkAAAD3/9r/AAACAAoAAAD3/9v/AAACAAsAAAD4/9n/AAADAAkAAAD4/9r/AAADAAoAAAD4/9v/AAADAAsAAAD5/93/AAAAAAkAAAD5/97/AAAAAAoAAAD5/9//AAAAAAsAAAD6/93/AAABAAkAAAD6/97/AAABAAoAAAD6/9//AAABAAsAAAD7/93/AAACAAkAAAD7/97/AAACAAoAAAD7/9//AAACAAsAAAD8/93/AAADAAkAAAD8/97/AAADAAoAAAD8/9//AAADAAsAAADx/+n/AAAAAAkAAADx/+r/AAAAAAoAAADx/+v/AAAAAAsAAADy/+n/AAABAAkAAADy/+r/AAABAAoAAADy/+v/AAABAAsAAADz/+n/AAACAAkAAADz/+r/AAACAAoAAADz/+v/AAACAAsAAAD0/+n/AAADAAkAAAD0/+r/AAADAAoAAAD0/+v/AAADAAsAAAD1//H/AAAAAAkAAAD1//L/AAAAAAoAAAD1//P/AAAAAAsAAAD2//H/AAABAAkAAAD2//L/AAABAAoAAAD2//P/AAABAAsAAAD3//H/AAACAAkAAAD3//L/AAACAAoAAAD3//P/AAACAAsAAAD4//H/AAADAAkAAAD4//L/AAADAAoAAAD4//P/AAADAAsAAADx/wEAAAAAAAkAAADx/wIAAAAAAAoAAADx/wMAAAAAAAsAAADy/wEAAAABAAkAAADy/wIAAAABAAoAAADy/wMAAAABAAsAAADz/wEAAAACAAkAAADz/wIAAAACAAoAAADz/wMAAAACAAsAAAD0/wEAAAADAAkAAAD0/wIAAAADAAoAAAD0/wMAAAADAAsAAAD5/wUAAAAAAAkAAAD5/wYAAAAAAAoAAAD5/wcAAAAAAAsAAAD6/wUAAAABAAkAAAD6/wYAAAABAAoAAAD6/wcAAAABAAsAAAD7/wUAAAACAAkAAAD7/wYAAAACAAoAAAD7/wcAAAACAAsAAAD8/wUAAAADAAkAAAD8/wYAAAADAAoAAAD8/wcAAAADAAsAAAD7//n/AAAEAAkAAAD7//r/AAAEAAoAAAD7//v/AAAEAAsAAAD8//n/AAAFAAkAAAD8//r/AAAFAAoAAAD8//v/AAAFAAsAAAD9//n/AAAGAAkAAAD9//r/AAAGAAoAAAD9//v/AAAGAAsAAAD+//n/AAAHAAkAAAD+//r/AAAHAAoAAAD+//v/AAAHAAsAAADz//n/AAAEAAkAAADz//r/AAAEAAoAAADz//v/AAAEAAsAAAD0//n/AAAFAAkAAAD0//r/AAAFAAoAAAD0//v/AAAFAAsAAAD1//n/AAAGAAkAAAD1//r/AAAGAAoAAAD1//v/AAAGAAsAAAD2//n/AAAHAAkAAAD2//r/AAAHAAoAAAD2//v/AAAHAAsAAAD3/+X/AAAEAAkAAAD3/+b/AAAEAAoAAAD3/+f/AAAEAAsAAAD4/+X/AAAFAAkAAAD4/+b/AAAFAAoAAAD4/+f/AAAFAAsAAAD5/+X/AAAGAAkAAAD5/+b/AAAGAAoAAAD5/+f/AAAGAAsAAAD6/+X/AAAHAAkAAAD6/+b/AAAHAAoAAAD6/+f/AAAHAAsAAAD1/8T/AAAAAAYAAAD1/8X/AAAAAAcAAAD1/8b/AAAAAAgAAAD2/8T/AAABAAYAAAD2/8X/AAABAAcAAAD2/8b/AAABAAgAAAD3/8T/AAACAAYAAAD3/8X/AAACAAcAAAD3/8b/AAACAAgAAAD4/8T/AAADAAYAAAD4/8X/AAADAAcAAAD4/8b/AAADAAgAAADy/5X/AAAKAAIAAADy/5b/AAAKAAMAAADz/5X/AAALAAIAAADz/5b/AAALAAMAAAD0/5X/AAAMAAIAAAD0/5b/AAAMAAMAAAD9/5X/AAAKAAAAAAD9/5b/AAAKAAEAAAD+/5X/AAALAAAAAAD+/5b/AAALAAEAAAD//5X/AAAMAAAAAAD//5b/AAAMAAEAAADy/5D/AAAAAAAAAADy/5H/AAAAAAEAAADy/5L/AAAAAAIAAADz/5D/AAABAAAAAADz/5H/AAABAAEAAADz/5L/AAABAAIAAAD0/5D/AAACAAAAAAD0/5H/AAACAAEAAAD0/5L/AAACAAIAAAD1/5D/AAADAAAAAAD1/5H/AAADAAEAAAD1/5L/AAADAAIAAAD2/5D/AAAEAAAAAAD2/5H/AAAEAAEAAAD2/5L/AAAEAAIAAAD7/5D/AAAFAAAAAAD7/5H/AAAFAAEAAAD7/5L/AAAFAAIAAAD8/5D/AAAGAAAAAAD8/5H/AAAGAAEAAAD8/5L/AAAGAAIAAAD9/5D/AAAHAAAAAAD9/5H/AAAHAAEAAAD9/5L/AAAHAAIAAAD+/5D/AAAIAAAAAAD+/5H/AAAIAAEAAAD+/5L/AAAIAAIAAAD//5D/AAAJAAAAAAD//5H/AAAJAAEAAAD//5L/AAAJAAIAAAA=")
tile_set = ExtResource("3_lulm0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -3
offset = Vector2(0, -1792)
transform = Transform2D(1, 0, 0, 1, 0, -1792)
follow_viewport_enabled = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
z_index = -3
offset_right = 224.0
offset_bottom = 2048.0
texture = ExtResource("3_kv7jj")

[node name="MainPlayerChar" parent="." instance=ExtResource("9_7flg8")]
unique_name_in_owner = true
position = Vector2(102, 202)

[node name="EnemyController" parent="." instance=ExtResource("12_agy7h")]

[node name="MobSpawner" parent="." instance=ExtResource("13_t4381")]

[node name="MotoSpawn" parent="." instance=ExtResource("14_7n4ro")]
position = Vector2(209, -841)

[node name="GrupoCheckpoints" type="Node" parent="."]

[node name="Checkpoint" parent="GrupoCheckpoints" instance=ExtResource("15_8o4gy")]
position = Vector2(0, -250)
collision_layer = 0
collision_mask = 2

[node name="Checkpoint2" parent="GrupoCheckpoints" instance=ExtResource("15_8o4gy")]
position = Vector2(0, -970)
collision_layer = 0
collision_mask = 2

[node name="Checkpoint3" parent="GrupoCheckpoints" instance=ExtResource("15_8o4gy")]
position = Vector2(0, -1336)
collision_layer = 0
collision_mask = 2

[node name="DoorSpawner" parent="." instance=ExtResource("16_0wxkn")]
position = Vector2(113, -1803)
collision_layer = 0
collision_mask = 0

[node name="Caixas_de_granadas" type="Node" parent="."]

[node name="ItemGranadaExtra2" parent="Caixas_de_granadas" instance=ExtResource("18_cd0vo")]
position = Vector2(182, 45)

[node name="ItemGranadaExtra3" parent="Caixas_de_granadas" instance=ExtResource("18_cd0vo")]
position = Vector2(179, -387)
grenadeBonus = 5

[node name="ItemGranadaExtra4" parent="Caixas_de_granadas" instance=ExtResource("18_cd0vo")]
position = Vector2(38, -704)
grenadeBonus = 5

[node name="ItemGranadaExtra5" parent="Caixas_de_granadas" instance=ExtResource("18_cd0vo")]
position = Vector2(83, -1704)
grenadeBonus = 5

[node name="ItemGranadaExtra6" parent="Caixas_de_granadas" instance=ExtResource("18_cd0vo")]
position = Vector2(141, -1704)
grenadeBonus = 5

[node name="Portao2" parent="." instance=ExtResource("20_m5r2a")]
position = Vector2(112, -1762)

[node name="Trigger_Mobs_Portao" parent="." instance=ExtResource("22_s5h8a")]
position = Vector2(0, -1600)
collision_layer = 0
collision_mask = 2

[node name="HUD" parent="." instance=ExtResource("23_ecu1h")]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(103, 201)

[node name="DeathTraps" type="Node" parent="."]

[node name="ColisaoPitfall" parent="DeathTraps" instance=ExtResource("14_kv7jj")]
position = Vector2(144, -350)
scale = Vector2(0.7, 0.18)

[node name="ColisaoPitfall3" parent="DeathTraps" instance=ExtResource("14_kv7jj")]
position = Vector2(177, -350)
scale = Vector2(0.7, 0.18)

[node name="ColisaoPitfall4" parent="DeathTraps" instance=ExtResource("14_kv7jj")]
position = Vector2(18, -542)
scale = Vector2(0.7, 0.18)

[node name="ColisaoPitfall6" parent="DeathTraps" instance=ExtResource("14_kv7jj")]
position = Vector2(175, -605)
scale = Vector2(1, 0.15)

[node name="ColisaoPitfall7" parent="DeathTraps" instance=ExtResource("14_kv7jj")]
position = Vector2(46, -668)
scale = Vector2(1, 0.15)

[node name="ColisaoPitfall5" parent="DeathTraps" instance=ExtResource("14_kv7jj")]
position = Vector2(51, -542)
scale = Vector2(0.7, 0.18)

[node name="Agentes_morteiro" parent="." instance=ExtResource("19_lji2o")]
position = Vector2(25, -1719)

[node name="Agentes_morteiro2" parent="." instance=ExtResource("19_lji2o")]
position = Vector2(202, -1719)

[connection signal="dead_player" from="MainPlayerChar" to="." method="_on_main_player_char_dead_player"]
[connection signal="stoppedSpawning" from="DoorSpawner" to="." method="_on_door_spawner_stopped_spawning"]
[connection signal="area_entered" from="Trigger_Mobs_Portao" to="." method="_on_trigger_mobs_portao_area_entered"]
[connection signal="area_entered" from="Trigger_Mobs_Portao" to="MobSpawner" method="_on_trigger_area_entered"]
[connection signal="area_entered" from="Trigger_Mobs_Portao" to="DoorSpawner" method="_on_trigger_mobs_portao_area_entered"]
[connection signal="area_entered" from="Trigger_Mobs_Portao" to="Portao2" method="_on_trigger_mobs_portao_area_entered"]
